Ready for deployment

--- a/vercel.json
+++ b/vercel.json
@@ -5,10 +5,7 @@
     }
   },
   "env": {
-    "DATABASE_URL": "@database-url",
-    "REDIS_URL": "@redis-url", 
-    "OPENAI_API_KEY": "@openai-api-key",
-    "PYTHON_SERVICE_URL": "@python-service-url"
+    "OPENAI_API_KEY": "@openai-api-key"
   },
   "build": {
     "env": {
